--- a/src/app/config/lang/en.lang.json
+++ b/src/app/config/lang/en.lang.json
@@ -1,17 +1,19 @@
 {
   "name": "English",
   "code": "en",
-  "keys": [
-    [
+  "keys": {
+    "windows": [
       [["`", "~"], ["1", "!"], ["2", "@"], ["3", "#"], ["4", "$"], ["5", "%"], ["6", "^"], ["7", "&"], ["8", "*"], ["9", "("], ["0", ")"], ["-", "_"], ["=", "+"]],
       [["q"], ["w"], ["e"], ["r"], ["t"], ["y"], ["u"], ["i"], ["o"], ["p"], ["[", "{"], ["]", "}"]],
       [["a"], ["s"], ["d"], ["f"], ["g"], ["h"], ["j"], ["k"], ["l"], [";", ":"], ["'", "\""], ["\"", "|"]],
       [["\\", "|"], ["z"], ["x"], ["c"], ["v"], ["b"], ["n"], ["m"], [",", "<"], [".", ">"], ["/", "?"]]    
-    ],[
-      [["`", "~"], ["1", "!"], ["2", "@"], ["3", "#"], ["4", "$"], ["5", "%"], ["6", "^"], ["7", "&"], ["8", "*"], ["9", "("], ["0", ")"], ["-", "_"], ["=", "+"]],
-      [["q"], ["w"], ["e"], ["r"], ["t"], ["y"], ["u"], ["i"], ["o"], ["p"], ["[", "{"], ["]", "}"]],
-      [["a"], ["s"], ["d"], ["f"], ["g"], ["h"], ["j"], ["k"], ["l"], [";", ":"], ["'", "\""], ["\"", "|"]],
-      [["\\", "|"], ["z"], ["x"], ["c"], ["v"], ["b"], ["n"], ["m"], [",", "<"], [".", ">"], ["/", "?"]]    
+    ],
+    "ios": [
+      [["`", "~"], ["1", "!"], ["2", "@"], ["3", "#"], ["4", "$"], ["5", "%"], ["6", "^"], ["7", "&"], ["8", "*"], ["9", "("], ["0", ")"], ["-", "_"], ["=", "+"], ["delete"]],
+      [["tab"], ["q"], ["w"], ["e"], ["r"], ["t"], ["y"], ["u"], ["i"], ["o"], ["p"], ["[", "{"], ["]", "}"], ["\\", "|"]],
+      [["caps lock"], ["a"], ["s"], ["d"], ["f"], ["g"], ["h"], ["j"], ["k"], ["l"], [";", ":"], ["'", "\""], ["return", "enter"]],
+      [["shift"], ["z"], ["x"], ["c"], ["v"], ["b"], ["n"], ["m"], [",", "<"], [".", ">"], ["/", "?"], ["shift"]],
+      [["control"], ["option", "alt"], ["command", "8984"], [""], ["command", "8984"], ["option", "alt"]]    
     ]
-  ]
+  }
 }
