--- a/src/app/config/lang/ru.lang.json
+++ b/src/app/config/lang/ru.lang.json
@@ -1,19 +1,27 @@
 {
   "name": "Русский",
   "code": "ru",
-  "keys": [
-    [
+  "isDiacritic": false,
+  "keys": {
+    "normal": [
       ["ё", "1", "2", "3", "4", "5", "6", "7", "8", "9", "0", "-", "="],
       ["й", "ц", "у", "к", "е", "н", "г", "ш", "щ", "з", "х", "ъ"],
       ["ф", "ы", "в", "а", "п", "р", "о", "л", "д", "ж", "э", "\\"],
       ["\\", "я", "ч", "с", "м", "и", "т", "ь", "б", "ю", "."]    
     ],
-    [
+    "shift": [
       ["Ё", "!", "\"", "№", ";", "%", ":", "?", "*", "(", ")", "_", "+"],
       ["Й", "Ц", "У", "К", "Е", "Н", "Г", "Ш", "Щ", "З", "Х", "Ъ"],
       ["Ф", "Ы", "В", "А", "П", "Р", "О", "Л", "Д", "Ж", "Э", "/"],
       ["|", "Я", "Ч", "С", "М", "И", "Т", "Ь", "Б", "Ю", ","]
+    ],
+    "ios": [
+      [["]", "["], ["1", "!"], ["2", "\""], ["3", "№"], ["4", "%"], ["5", ":"], ["6", ","], ["7", "."], ["8", ";"], ["9", "("], ["0", ")"], ["-", "_"], ["=", "+"], ["delete"]],
+      [["tab"], ["й"], ["ц"], ["у"], ["к"], ["е"], ["н"], ["г"], ["ш"], ["щ"], ["з"], ["х"], ["ъ"], ["ё"]],
+      [["caps lock"], ["ф"], ["ы"], ["в"], ["а"], ["п"], ["р"], ["о"], ["л"], ["д"], ["ж"], ["э"], ["enter", "return"]],
+      [["shift"], ["я"], ["ч"], ["с"], ["м"], ["и"], ["т"], ["ь"], ["б"], ["ю"], ["/", "?"],["shift"]],
+      [["control"], ["option", "alt"], ["command", "8984"], [""], ["command", "8984"], ["option", "alt"], ["arrows"]]       
     ]
-  ]
+  }
 }
 
