--- a/src/app/config/lang/es.lang.json
+++ b/src/app/config/lang/es.lang.json
@@ -4,17 +4,150 @@
   "isDiacritic": true,
   "keys": {
     "windows": [
-      ["|", "1", "2", "3", "4", "5", "6", "7", "8", "9", "0", "'", "¿"],
-      ["q", "w", "e", "r", "t", "y", "u", "i", "o", "p", "´", "+"],
-      ["a", "s", "d", "f", "g", "h", "j", "k", "l", "ñ", "{", "}"],
-      ["<", "z", "x", "c", "v", "b", "n", "m", ",", ".", "-"]    
+      [
+        ["'", "\""],
+        ["1", "¡"],
+        ["2", "!"],
+        ["3", "#"],
+        ["4", "$"],
+        ["5", "%"],
+        ["6", "/"],
+        ["7", "&"],
+        ["8", "*"],
+        ["9", "("],
+        ["0", ")"],
+        ["-", "_"],
+        ["=", "+"],
+        ["delete"]
+      ],
+      [
+        ["tab"],
+        ["q"],
+        ["w"],
+        ["e"],
+        ["r"],
+        ["t"],
+        ["y"],
+        ["u"],
+        ["i"],
+        ["o"],
+        ["p"],
+        ["\u0301", "º"],
+        ["\u0300", "\u0308"]
+      ],
+      [
+        ["caps lock"],
+        ["a"],
+        ["s"],
+        ["d"],
+        ["f"],
+        ["g"],
+        ["h"],
+        ["j"],
+        ["k"],
+        ["l"],
+        ["ñ"],
+        ["{", "["],
+        ["}", "]"],
+        ["enter"]
+      ],
+      [
+        ["shift"],
+        ["<", ">"],
+        ["z"],
+        ["x"],
+        ["c"],
+        ["v"],
+        ["b"],
+        ["n"],
+        ["m"],
+        [",", "¿"],
+        [".", "?"],
+        ["ç"],
+        ["shift"]
+      ],
+      [
+        ["control"],
+        ["command", "8984"],
+        ["option", "alt"],
+        [""],
+        ["option", "alt"],
+        ["command", "8984"],
+        ["arrows"]
+      ]
     ],
     "ios": [
-      [["<", ">"], ["1", "¡"], ["2", "!"], ["3", "#"], ["4", "$"], ["5", "%"], ["6", "/"], ["7", "&"], ["8", "*"], ["9", "("], ["0", ")"], ["-", "_"], ["=", "+"], ["delete"]],
-      [["tab"], ["q"], ["w"], ["e"], ["r"], ["t"], ["y"], ["u"], ["i"], ["o"], ["p"], ["\u0301", "º"], ["\u0300", "\u0308"], ["'", "\""]],
-      [["caps lock"], ["a"], ["s"], ["d"], ["f"], ["g"], ["h"], ["j"], ["k"], ["l"], ["ñ"], ["{", "["], ["}", "]"], ["enter", "return"]],
-      [["shift"], ["z"], ["x"], ["c"], ["v"], ["b"], ["n"], ["m"], [",", "¿"], [".", "?"], ["ç"],["shift"]],
-      [["control"], ["option", "alt"], ["command", "8984"], [""], ["command", "8984"], ["option", "alt"], ["arrows"]]       
+      [
+        ["<", ">"],
+        ["1", "¡"],
+        ["2", "!"],
+        ["3", "#"],
+        ["4", "$"],
+        ["5", "%"],
+        ["6", "/"],
+        ["7", "&"],
+        ["8", "*"],
+        ["9", "("],
+        ["0", ")"],
+        ["-", "_"],
+        ["=", "+"],
+        ["delete"]
+      ],
+      [
+        ["tab"],
+        ["q"],
+        ["w"],
+        ["e"],
+        ["r"],
+        ["t"],
+        ["y"],
+        ["u"],
+        ["i"],
+        ["o"],
+        ["p"],
+        ["\u0301", "º"],
+        ["\u0300", "\u0308"],
+        ["'", "\""]
+      ],
+      [
+        ["caps lock"],
+        ["a"],
+        ["s"],
+        ["d"],
+        ["f"],
+        ["g"],
+        ["h"],
+        ["j"],
+        ["k"],
+        ["l"],
+        ["ñ"],
+        ["{", "["],
+        ["}", "]"],
+        ["enter", "return"]
+      ],
+      [
+        ["shift"],
+        ["z"],
+        ["x"],
+        ["c"],
+        ["v"],
+        ["b"],
+        ["n"],
+        ["m"],
+        [",", "¿"],
+        [".", "?"],
+        ["ç"],
+        ["shift"]
+      ],
+      [
+        ["control"],
+        ["option", "alt"],
+        ["command", "8984"],
+        [""],
+        ["command", "8984"],
+        ["option", "alt"],
+        ["arrows"]
+      ]
     ]
   }
 }
