feat: background change accodring to user time

--- a/src/app/config/lang/es.lang.json
+++ b/src/app/config/lang/es.lang.json
@@ -72,7 +72,7 @@
         ["option", "alt"],
         [""],
         ["option", "alt"],
-        ["command", "8984"],
+        ["command", "ctrl"],
         ["arrows"]
       ]
     ],
