--- a/src/app/config/lang/en.lang.json
+++ b/src/app/config/lang/en.lang.json
@@ -4,17 +4,149 @@
   "isDiacritic": false,
   "keys": {
     "windows": [
-      [["`", "~"], ["1", "!"], ["2", "@"], ["3", "#"], ["4", "$"], ["5", "%"], ["6", "^"], ["7", "&"], ["8", "*"], ["9", "("], ["0", ")"], ["-", "_"], ["=", "+"]],
-      [["q"], ["w"], ["e"], ["r"], ["t"], ["y"], ["u"], ["i"], ["o"], ["p"], ["[", "{"], ["]", "}"]],
-      [["a"], ["s"], ["d"], ["f"], ["g"], ["h"], ["j"], ["k"], ["l"], [";", ":"], ["'", "\""], ["\"", "|"]],
-      [["\\", "|"], ["z"], ["x"], ["c"], ["v"], ["b"], ["n"], ["m"], [",", "<"], [".", ">"], ["/", "?"],["arrows"]]    
+      [
+        ["`", "~"],
+        ["1", "!"],
+        ["2", "@"],
+        ["3", "#"],
+        ["4", "$"],
+        ["5", "%"],
+        ["6", "^"],
+        ["7", "&"],
+        ["8", "*"],
+        ["9", "("],
+        ["0", ")"],
+        ["-", "_"],
+        ["=", "+"],
+        ["delete"]
+      ],
+      [
+        ["tab"],
+        ["q"],
+        ["w"],
+        ["e"],
+        ["r"],
+        ["t"],
+        ["y"],
+        ["u"],
+        ["i"],
+        ["o"],
+        ["p"],
+        ["[", "{"],
+        ["]", "}"]
+      ],
+      [
+        ["caps lock"],
+        ["a"],
+        ["s"],
+        ["d"],
+        ["f"],
+        ["g"],
+        ["h"],
+        ["j"],
+        ["k"],
+        ["l"],
+        [";", ":"],
+        ["'", "\""],
+        ["\"", "|"],
+        ["enter"]
+      ],
+      [
+        ["shift"],
+        ["\\", "|"],
+        ["z"],
+        ["x"],
+        ["c"],
+        ["v"],
+        ["b"],
+        ["n"],
+        ["m"],
+        [",", "<"],
+        [".", ">"],
+        ["/", "?"],
+        ["shift"]
+      ],
+      [
+        ["control"],
+        ["command", "8984"],
+        ["option", "alt"],
+        [""],
+        ["option", "alt"],
+        ["command", "ctrl"],
+        ["arrows"]
+      ]
     ],
     "ios": [
-      [["`", "~"], ["1", "!"], ["2", "@"], ["3", "#"], ["4", "$"], ["5", "%"], ["6", "^"], ["7", "&"], ["8", "*"], ["9", "("], ["0", ")"], ["-", "_"], ["=", "+"], ["delete"]],
-      [["tab"], ["q"], ["w"], ["e"], ["r"], ["t"], ["y"], ["u"], ["i"], ["o"], ["p"], ["[", "{"], ["]", "}"], ["\\", "|"]],
-      [["caps lock"], ["a"], ["s"], ["d"], ["f"], ["g"], ["h"], ["j"], ["k"], ["l"], [";", ":"], ["'", "\""], ["return", "enter"]],
-      [["shift"], ["z"], ["x"], ["c"], ["v"], ["b"], ["n"], ["m"], [",", "<"], [".", ">"], ["/", "?"], ["shift"]],
-      [["control"], ["option", "alt"], ["command", "8984"], [""], ["command", "8984"], ["option", "alt"], ["arrows"]]    
+      [
+        ["`", "~"],
+        ["1", "!"],
+        ["2", "@"],
+        ["3", "#"],
+        ["4", "$"],
+        ["5", "%"],
+        ["6", "^"],
+        ["7", "&"],
+        ["8", "*"],
+        ["9", "("],
+        ["0", ")"],
+        ["-", "_"],
+        ["=", "+"],
+        ["delete"]
+      ],
+      [
+        ["tab"],
+        ["q"],
+        ["w"],
+        ["e"],
+        ["r"],
+        ["t"],
+        ["y"],
+        ["u"],
+        ["i"],
+        ["o"],
+        ["p"],
+        ["[", "{"],
+        ["]", "}"],
+        ["\\", "|"]
+      ],
+      [
+        ["caps lock"],
+        ["a"],
+        ["s"],
+        ["d"],
+        ["f"],
+        ["g"],
+        ["h"],
+        ["j"],
+        ["k"],
+        ["l"],
+        [";", ":"],
+        ["'", "\""],
+        ["return", "enter"]
+      ],
+      [
+        ["shift"],
+        ["z"],
+        ["x"],
+        ["c"],
+        ["v"],
+        ["b"],
+        ["n"],
+        ["m"],
+        [",", "<"],
+        [".", ">"],
+        ["/", "?"],
+        ["shift"]
+      ],
+      [
+        ["control"],
+        ["option", "alt"],
+        ["command", "8984"],
+        [""],
+        ["command", "8984"],
+        ["option", "alt"],
+        ["arrows"]
+      ]
     ]
   }
 }
