--- a/src/app/config/lang/en.lang.json
+++ b/src/app/config/lang/en.lang.json
@@ -18,7 +18,7 @@
         ["0", ")"],
         ["-", "_"],
         ["=", "+"],
-        ["delete"]
+        ["backspace"]
       ],
       [
         ["tab"],
@@ -66,15 +66,7 @@
         ["/", "?"],
         ["shift"]
       ],
-      [
-        ["control"],
-        ["command", "8984"],
-        ["option", "alt"],
-        [""],
-        ["option", "alt"],
-        ["command", "ctrl"],
-        ["arrows"]
-      ]
+      [["ctrl"], ["meta"], ["alt"], [""], ["alt"], ["ctrl"], ["arrows"]]
     ],
     "ios": [
       [
