refactor: clean up dom rendering logic

--- a/src/app/config/lang/en.lang.json
+++ b/src/app/config/lang/en.lang.json
@@ -68,7 +68,7 @@
       ],
       [["ctrl"], ["meta"], ["alt"], [""], ["alt"], ["ctrl"], ["arrows"]]
     ],
-    "ios": [
+    "macos": [
       [
         ["`", "~"],
         ["1", "!"],
