--- a/src/app/config/lang/ru.lang.json
+++ b/src/app/config/lang/ru.lang.json
@@ -3,7 +3,7 @@
   "code": "ru",
   "isDiacritic": false,
   "keys": {
-    "ios": [
+    "macos": [
       [
         ["]", "["],
         ["1", "!"],
