fix: minor layout fix for es/ru keyboard

--- a/src/app/config/lang/es.lang.json
+++ b/src/app/config/lang/es.lang.json
@@ -18,7 +18,7 @@
         ["0", ")"],
         ["-", "_"],
         ["=", "+"],
-        ["delete"]
+        ["backspace"]
       ],
       [
         ["tab"],
@@ -66,15 +66,7 @@
         ["ç"],
         ["shift"]
       ],
-      [
-        ["control"],
-        ["command", "8984"],
-        ["option", "alt"],
-        [""],
-        ["option", "alt"],
-        ["command", "ctrl"],
-        ["arrows"]
-      ]
+      [["ctrl"], ["meta"], ["alt"], [""], ["alt"], ["ctrl"], ["arrows"]]
     ],
     "macos": [
       [
@@ -121,8 +113,7 @@
         ["k"],
         ["l"],
         ["ñ"],
-        ["{", "["],
-        ["}", "]"],
+        [";", ":"],
         ["enter", "return"]
       ],
       [
