--- a/src/app/config/lang/ru.lang.json
+++ b/src/app/config/lang/ru.lang.json
@@ -3,6 +3,71 @@
   "code": "ru",
   "isDiacritic": false,
   "keys": {
+    "windows": [
+      [
+        ["ё"],
+        ["1", "!"],
+        ["2", "\""],
+        ["3", "№"],
+        ["4", "%"],
+        ["5", ":"],
+        ["6", ","],
+        ["7", "."],
+        ["8", ";"],
+        ["9", "("],
+        ["0", ")"],
+        ["-", "_"],
+        ["=", "+"],
+        ["backspace"]
+      ],
+      [
+        ["tab"],
+        ["й"],
+        ["ц"],
+        ["у"],
+        ["к"],
+        ["е"],
+        ["н"],
+        ["г"],
+        ["ш"],
+        ["щ"],
+        ["з"],
+        ["х"],
+        ["ъ"]
+      ],
+      [
+        ["caps lock"],
+        ["ф"],
+        ["ы"],
+        ["в"],
+        ["а"],
+        ["п"],
+        ["р"],
+        ["о"],
+        ["л"],
+        ["д"],
+        ["ж"],
+        ["э"],
+        ["\"", "|"],
+        ["enter"]
+      ],
+      [
+        ["shift"],
+        ["]", "["],
+        ["я"],
+        ["ч"],
+        ["с"],
+        ["м"],
+        ["и"],
+        ["т"],
+        ["ь"],
+        ["б"],
+        ["ю"],
+        ["/", "?"],
+        ["shift"]
+      ],
+      [["ctrl"], ["meta"], ["alt"], [""], ["alt"], ["ctrl"], ["arrows"]]
+    ],
     "macos": [
       [
         ["]", "["],
